--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,8 @@
 		<form>
 			<!--padding-top: 0px; padding-bottom: 0px;-->
 			<div class="form-group container col-md-12">
+				
+		<fieldset>
 				<div class="row">
 					<div class="col-md-2">
             <div class = "sidenav">
@@ -56,6 +58,7 @@
 					
 						
 				</div>
+				</fieldset>
 			</div>
 		</form>
 	</body>
