--- a/src/app/biography/biography.component.html
+++ b/src/app/biography/biography.component.html
@@ -6,57 +6,35 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" />
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-		<script src="navigationJs.js"></script>
+		
 	</head>
 	<body>
-		<form>
+		<div id = "biographyDet">
 			
 			<div class="form-group container col-md-12 headerStyle">Personal Biography</div>	
 			<div class="form-group container col-md-12">
 				<div class="row" id = "mainPiDiv">
-					<div class="col-6 col-md-12 divText"><b>Additional interest</b>
-						<button type="button" class="close delBtn" aria-label="Close">
-							<span aria-hidden="true">&times;</span>
-						</button>
-					</div>
-					<div class="col-6 col-md-12 divText">1. Reading New Papers and Story Books
-						<button type="button" class="close delBtn" aria-label="Close">
-							<span aria-hidden="true">&times;</span>
-						</button>
-					</div>
-					<div class="col-6 col-md-12 divText">2. Solving Rubi's Cube
-						<button type="button" class="close delBtn" aria-label="Close">
-							<span aria-hidden="true">&times;</span>
-						</button>
-					</div>
-					<div class="col-6 col-md-12 divText">3. Travelling  Photography
-						<button type="button" class="close delBtn" aria-label="Close">
+					<div class="col-6 col-md-12 divText" *ngFor="let biography of biographies;let i = index">
+						{{i+1}}. <a (click)="editTodo(i)">{{biography.biography}}</a>
+						<!--button class="btn-xs btn-danger" (click)="removeTodo(i)">X</button-->
+						<button type="button" class="close" aria-label="Close" (click)="removeBiography(i)">
 							<span aria-hidden="true">&times;</span>
 						</button>
 					</div>
 				</div>
 			</div>
-			
-			<!--div> <p><a href="navigation.html">Return to Navigation</a></p></div-->
-			
-			
+						
 			
 			<br><br><br>
 			<div class="input-group input-group-sm mb-3">
-			  <div class="input-group-prepend">
-				<span class="input-group-text" id="inputGroup-sizing-sm">Serial</span>
-			  </div>
-			  <input type="number" id="serialId" name="serialId" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm" placeholder="Ex: (1..9)" required/>
-			</div>
-			<div class="input-group input-group-sm mb-3">
-			  <div class="input-group-prepend">
+				<div class="input-group-prepend">
 				<span class="input-group-text" id="inputGroup-sizing-sm">Interest/Knowledge</span>
-			  </div>
-			  <input type="text" id="piId" name="piId" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm" placeholder="Interest/Knowledge" required/>
+				</div>
+				<input type="text" [(ngModel)]="biographyDet.biography" id="biography" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm" placeholder="Interest/Knowledge"/>
 			</div>
 			
 			<!--button type="button" class="btn btn-secondary btn-sm" onClick="addPi()">Add More</button-->
-			<button type="button" class="btn btn-secondary btn-sm" id="piButton" >Add More</button>
-		</form>
+			<button type="button" class="btn btn-secondary btn-sm" *ngIf="!(id >= 0)" (click)="addBiography()">Add More</button>
+		</div>
 	</body>
 </html>
