--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -6,41 +6,33 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" />
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-		<script src="navigationJs.js"></script>
+		
 	</head>
 	<body>
-		<form>
+		<div id = "experienceDet">
 			
 			<div class="form-group container col-md-12 headerStyle">Experience</div>	
 			<div class="form-group container col-md-12">		
 				<div class="row" id = "mainExpDiv">
-					<div class="col-6 col-md-12 divText">1. Java/J2EE (10+ years)
-						<button type="button" class="close delBtn" aria-label="Close">
-							<span aria-hidden="true">&times;</span>
-						</button>
+					<div class="col-6 col-md-12 divText" *ngFor="let experience of experiences;let i = index">
+							{{i+1}}. <a (click)="editTodo(i)">{{experience.experience}}</a>
+							<button type="button" class="close" aria-label="Close" (click)="removeExperience(i)">
+								<span aria-hidden="true">&times;</span>
+							</button>
 					</div>
 				</div>
 			</div>
 			
-			<!--div> <p><a href="navigation.html">Return to Navigation</a></p></div-->
-			
-			
 			<br><br><br>
-			<div class="input-group input-group-sm mb-3">
-			  <div class="input-group-prepend">
-				<span class="input-group-text" id="inputGroup-sizing-sm">Serial</span>
-			  </div>
-			  <input type="number" id="serialId" name="serialId" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm" placeholder="Ex: (1..9)" required/>
-			</div>
 			<div class="input-group input-group-sm mb-3">
 			  <div class="input-group-prepend">
 				<span class="input-group-text" id="inputGroup-sizing-sm">Experience Summary</span>
 			  </div>
-			  <input type="text" id="experiencetId" name="experiencetId" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm" placeholder="Experience Summary" required/>
+				<input type="text" [(ngModel)]="experienceDet.experience" id="experience" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm" placeholder="Experience Summary"/>
 			</div>
 			
 			<!--button type="button" class="btn btn-secondary btn-sm" onClick="addExp()">Add More</button-->
-			<button type="button" class="btn btn-secondary btn-sm" id="expButton" >Add More</button>
-		</form>
+			<button type="button" class="btn btn-secondary btn-sm" *ngIf="!(id >= 0)" (click)="addExperience()">Add More</button>
+		</div>
 	</body>
 </html>
