--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -6,25 +6,14 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" />
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-		<script src="navigationJs.js"></script>
+		
 	</head>
 	<body>
-		<form>
+		<div id = "projectDet">
 			
 			<div class="form-group container col-md-12 headerStyle">Projects</div>	
 			<div class="form-group container col-md-12">		
 				<div class="row" id = "mainProjectDiv">
-					
-					<!--div class="col-6 col-md-12 divText">1. Client X - Java Web application development
-						<button type="button" class="close delBtn" aria-label="Close">
-							<span aria-hidden="true">&times;</span>
-						</button>
-					</div> 
-					<div class="col-6 col-md-12 divText">2. Client Y - Java batch development
-						<button type="button" class="close delBtn" aria-label="Close">
-							<span aria-hidden="true">&times;</span>
-						</button>
-					</div-->
 
 					<div class="col-6 col-md-12 divText" *ngFor="let project of projects;let i = index">
 						{{i+1}}. <a (click)="editTodo(i)">{{project.project}}</a>
@@ -37,26 +26,19 @@
 				</div>
 			</div>
 			
-			<!--div> <p><a href="navigation.html">Return to Navigation</a></p></div-->
-			
 			<br><br><br>
-			<!--div class="input-group input-group-sm mb-3">
-			  <div class="input-group-prepend">
-				<span class="input-group-text" id="inputGroup-sizing-sm">Serial</span>
-			  </div>
-				<input type="number" id="serialId" name="serialId" #serialId (change)="0" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm" placeholder="Ex: (1..9)" required/>
-			</div-->
 			<div class="input-group input-group-sm mb-3">
 			  <div class="input-group-prepend">
 				<span class="input-group-text" id="inputGroup-sizing-sm">Project</span>
 			  </div>
-				<input type="text" id="projectId" name="projectId" #projectId (change)="0" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm" placeholder="Project Description"/>
+				<!--input type="text" id="projectId" name="projectId" #projectId (change)="0" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm" placeholder="Project Description"/-->
+				<input type="text" [(ngModel)]="projectDet.project" id="project" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm" placeholder="Project Description"/>
 			</div>
 			
 			
 			<!--button type="button" class="btn btn-secondary btn-sm" onClick="addProjects()">Add More</button-->
 			<!--button type="button" class="btn btn-secondary btn-sm" id="projectButton" >Add More</button-->
-			<button type="button" class="btn btn-secondary btn-sm" (click) = "addProject(projectId.value)">Add More</button>
-		</form>
+			<button type="button" class="btn btn-secondary btn-sm" *ngIf="!(id >= 0)" (click)="addProject()">Add More</button>
+		</div>
 	</body>
 </html>
