--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -81,7 +81,7 @@ iframe {
 .sidenav {
     height: 95vh;
     /*width: 200px;*/
-    position: fixed;
+    /*position: fixed;*/
     z-index: 1;
     top: 0;
     left: 0;
